--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1859,7 +1859,9 @@ abbr[title] {
 blockquote {
     padding: 10px 20px;
     margin: 0 0 20px;
-    font-size: 17.5px;
+    font-size: 22px;
+    font-weight: bold;
+    color: #f3976c;
     border-left: 5px solid #eee
 }
 
