mod couleur blockquote

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1861,7 +1861,7 @@ blockquote {
     margin: 0 0 20px;
     font-size: 22px;
     font-weight: bold;
-    color: #f3976c;
+    color: #f76707;
     border-left: 5px solid #eee
 }
 
