--- a/style.css
+++ b/style.css
@@ -216,8 +216,8 @@ h1{color:#333333 !important;}
 .tc-white{color:#f3976c !important;}
 .btn-atomic-tangerine{background:#f3976c;color:black !important;}
 .btn-atomic-tangerine:hover{background:#c27956 !important;color:black !important;}
-.ltc-white{color:black;!important;}
-.ltc-white:hover{color:#cccccc;!important;}
+.ltc-white{color:black;}
+.ltc-white:hover{color:#cccccc;}
 .ltc-atomic-tangerine{color:#f3976c !important;}
 .ltc-atomic-tangerine:hover{color:#c27956 !important;}
 .icon-dark-slate-blue{color:#364577 !important;border-color:#364577 !important;}
@@ -229,7 +229,7 @@ h1{color:#333333 !important;}
 .bloc.full-width-bloc,
 .bloc-tile-2.full-width-bloc .container,
 .bloc-tile-3.full-width-bloc .container,
-.bloc-tile-4.full-width-bloc .container{padding-left:10;padding-right:10;}
+.bloc-tile-4.full-width-bloc .container{padding-left:10px;padding-right:10px;}
 }
 @media (max-width:992px) and (min-width:768px){.navbar .nav{max-width:80%;}
 .nav-center.navbar .nav{max-width:100%;}
@@ -268,7 +268,7 @@ p,
 .navbar-brand img{max-height:40px;width:auto;}
 .nav-invert .navbar-header{float:none;width:100%;}
 .nav-invert .navbar-toggle{float:left;margin-left:10px;}
-.bloc{padding-left:10;padding-right:10;}
+.bloc{padding-left:10px;padding-right:10px;}
 .bloc-xxl,
 .bloc-xl,
 .bloc-lg{padding:40px 0;}
@@ -279,7 +279,7 @@ p,
 .bloc-tile-4 .container,
 .bloc-fill-screen .fill-bloc-top-edge,
 .bloc-fill-screen .fill-bloc-bottom-edge{padding-left:0;padding-right:0;}
-.a-block{padding:10 10px;}
+.a-block{padding:10px 10px;}
 .btn-dwn{display:none;}
 .voffset{margin-top:5px;}
 .voffset-md{margin-top:20px;}
